<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/navigation_quiz"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/nav_quiz" />

    <item
        android:id="@+id/navigation_majors"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_majors" />

    <item
        android:id="@+id/navigation_schools"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_schools" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_profile" />
</menu>


